--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -13,10 +13,9 @@
             <ul id="nav-links-norm">
                 <li><a href="#" class="btn">Mac</a></li>
                 <li><a href="#" class="btn">iPad</a></li>
-                <li><a href="#" class="btn">iPhone</a></li>
+                <li><a href="product" class="btn">iPhone</a></li>
                 <li><a href="testZone" class="btn">testZone</a></li>
                 <li><a 
-                   
                     href="comparador" class="btn">Comparar</a></li>
             </ul>
         </nav>
@@ -37,9 +36,10 @@
         <ul id="nav-mobile-links">
             <li><a href="#" class="btn">Mac</a></li>
             <li><a href="#" class="btn">iPad</a></li>
-            <li><a href="#" class="btn">iPhone</a></li>
-            <li><a href="#" class="btn">Watch</a></li>
-            <li><a href="#" class="btn">Comparar</a></li>
+            <li><a href="product" class="btn">iPhone</a></li>
+            <li><a href="testZone" class="btn">testZone</a></li>
+            <li><a 
+                href="comparador" class="btn">Comparar</a></li>
         </ul>
     </nav>
     
