--- a/src/app/phoneComparator-page/comparator-component/comparator-component.component.css
+++ b/src/app/phoneComparator-page/comparator-component/comparator-component.component.css
@@ -4,6 +4,10 @@ section {
   max-width: 1200px;
   margin: 0 auto;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .titleBox {
@@ -12,31 +16,36 @@ section {
 }
 
 .titleBox h1 {
-  font-size: 80px;
+  font-size: 4em;
   color: #333;
 }
 
 .titleBox p {
-  font-size: 30px;
+  font-size: 2em;
   color: #666;
 }
 
 .modelSelectors {
+  width: 100%;
+
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-bottom: 30px;
 }
 
 .selectorBox {
-  width: 250px;
-  padding: 20px;
-  margin: 0 120px;
-  font-size: 1rem;
+  width: 28vw;
+  height: auto;
+
+  padding: 25px;
+ 
+  font-size: 1em;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
 }
 
-/* Estilo para los contenedores de los teléfonos */
+/*
+Estilo para los contenedores de los teléfonos 
 .phonesContainer {
   display: flex;
   justify-content: space-between;
@@ -45,13 +54,7 @@ section {
 
 
 
-/* Estilos Responsive */
-@media (max-width: 1024px) {
-  .phonesContainer {
-    flex-direction: column;
-    align-items: center;
-  }
-}
+
 
 @media (max-width: 768px) {
   .titleBox h1 {
@@ -80,27 +83,75 @@ section {
   }
 }
 
-/* @media (max-width: 480px) {
-  .titleBox h1 {
-    font-size: 1.5rem;
+
+ /*estilos sectores*/
+
+ /*la caja de todas las secciones*/
+.phonesContainer{
+  width: 100%;
+  height: auto;
+  /* border: 2px solid red; */
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 50px;
+
+  font-size: 1.5em;
+}
+
+/*la caja con las tarjetas de cada feacture*/
+.feacture{
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 20px;
+
+  /* border: 1px solid fuchsia; */
+}
+
+/*la tarjeta del feacture*/
+.card{
+  width: 30%;
+  /* border: 1px solid black; */
+}
+
+
+/*divisores */
+
+.divisorSection{
+
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+}
+
+.divisorLine{
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+  margin:20px;
+
+  margin-left: 20px;
+  margin-right: 20px;
+
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+
+@media (max-width: 500px) {
+
+  section{
+    font-size: .8em;
   }
 
-  .titleBox p {
-    font-size: 0.9rem;
-  }
 
-  .selectorBox {
-    width: 100%;
-    max-width: 180px;
-    font-size: 0.9rem;
-  }
-
-
-  .phonesContainer {
-    gap: 10px;
-    /* flex-direction: row; */
-  
-
-
-
-
+}
