--- a/src/app/phoneComparator-page/templates/phone-details/phone-details.component.html
+++ b/src/app/phoneComparator-page/templates/phone-details/phone-details.component.html
@@ -1,23 +1,23 @@
 <div class="container">
 
     <div class="phoneTitle">
-        <h1>{{phoneInput().model}}</h1>
+        <h1>{{phoneInput().modelo}}</h1>
     </div>
 
     <section class="features">
 
         <!-- camara -->
-        <div class="feature" (click)="testFn()">
+        <div class="feature">
             <svg fill="#000000" width="80" height="80" viewBox="-2 -4 24 24" xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="xMinYMin" class="jam jam-camera">
                 <path
                     d='M5.676 5H4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1.676l-.387-1.501A2.002 2.002 0 0 0 12 2H8a2 2 0 0 0-1.937 1.499L5.676 5zm-1.55-2C4.57 1.275 6.136 0 8 0h4a4.002 4.002 0 0 1 3.874 3H16a4 4 0 0 1 4 4v5a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V7a4 4 0 0 1 4-4h.126zM10 13a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm6-3a1 1 0 1 0 0-2 1 1 0 0 0 0 2z' />
             </svg>
 
-            <h2>{{phoneInput().camera}}</h2>
+            <h2>camara</h2>
             <!-- <p>ProMotion technology with adaptive 120Hz refresh rate</p> -->
         </div>
-
+        <section>---------------------------------------------------------</section>
         <!-- almacenamiento -->
         <div class="feature">
             <svg fill="#000000" width="80" height="80" viewBox="0 0 36 36" version="1.1"
@@ -29,7 +29,7 @@
                 </path>
                 <rect x="0" y="0" width="36" height="36" fill-opacity="0" />
             </svg>
-            <h2>{{phoneInput().storage}}</h2>
+            <h2>almacenamiento</h2>
             <!-- <p>ProMotion technology with adaptive 120Hz refresh rate</p> -->
         </div>
 
@@ -55,7 +55,7 @@
                 </g>
 
             </svg>
-            <h2>{{phoneInput().battery}}</h2>
+            <h2>bateria</h2>
             <!-- <p>ProMotion technology with adaptive 120Hz refresh rate</p> -->
         </div>
 
@@ -78,7 +78,7 @@
                     </g>
                 </g>
             </svg>
-            <h2>{{phoneInput().display}}</h2>
+            <h2>pantalla</h2>
             <!-- <p>ProMotion technology with adaptive 120Hz refresh rate</p> -->
         </div>
 
