--- a/src/app/product/product-gallery/product-gallery.component.html
+++ b/src/app/product/product-gallery/product-gallery.component.html
@@ -1,130 +1,130 @@
 <app-header></app-header>
 
 <section class="big-boss">
-<div>
-    
+  <div>
 
-  <!-- titulo  y banner-->
-  <div class="product-page">
-    <!-- Contenedor principal de la galería de imágenes -->
-    <div class="product-gallery">
-      <!-- Imagen principal -->
-      <div class="main-image">
-        <img [src]="mainImageUrl" alt="Imagen principal del producto" />
+
+    <!-- titulo  y banner-->
+    <div class="product-page">
+      <!-- Contenedor principal de la galería de imágenes -->
+      <div class="product-gallery">
+        <!-- Imagen principal -->
+        <div class="main-image">
+          <img [src]="mainImageUrl" alt="Imagen principal del producto" />
+        </div>
+
+        <!-- Carrusel de miniaturas -->
+        <div class="image-carousel">
+          <button class="carousel-btn prev-btn" (click)="prevImage()">&lt;</button>
+          <div class="thumbnails-container">
+            <div class="thumbnail" *ngFor="let img of images; let i = index" (click)="setMainImage(i)">
+              <img [src]="img" [class.active]="i === selectedImageIndex" alt="Miniatura {{i + 1}}">
+            </div>
+          </div>
+          <button class="carousel-btn next-btn" (click)="nextImage()">&gt;</button>
+        </div>
       </div>
-  
-      <!-- Carrusel de miniaturas -->
-      <div class="image-carousel">
-        <button class="carousel-btn prev-btn" (click)="prevImage()">&lt;</button>
-    <div class="thumbnails-container">
-      <div class="thumbnail" *ngFor="let img of images; let i = index" (click)="setMainImage(i)">
-        <img [src]="img" [class.active]="i === selectedImageIndex" alt="Miniatura {{i + 1}}">
+
+      <!-- Información del producto (parte derecha) -->
+      <div class="product-details">
+        <h1>{{phone.modelo}}</h1>
+        <div class="env-gar">
+          <p>{{phone.pantalla.medidas}}</p>
+          <p><strong>Garantia Oficial</strong></p>
+          <p>Hasta 1 día hábil después de la aprobación del pago</p>
+        </div>
+
+        <div class="button-section">
+          <p>Contacta con nostros para saber mas sobre el producto y su disponibilidad</p>
+          <button>Consultar</button>
+          <p>Compara este y otros productos mas!</p>
+          <button>Comparar</button>
+        </div>
+
+        <!-- Sección de Color y Memoria debajo del botón de compra -->
+        <div class="product-options">
+          <!-- Opciones de color -->
+          <div class="color-options">
+            <h3>Color</h3>
+            <div class="color-circles">
+              <div class="color-circle cream" title="Cream"></div>
+              <div class="color-circle graphite" title="Graphite"></div>
+              <div class="color-circle lavender selected" title="Lavender"></div>
+              <div class="color-circle mint" title="Mint"></div>
+              <div class="color-circle blue" title="Blue"></div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
-    <button class="carousel-btn next-btn" (click)="nextImage()">&gt;</button>
-      </div>
+
+
+
+
+
+
+
+
+
+
+    <!-- Especificaciones tecnicas -->
+    <div class="tech-specs-section">
+      <h2>Especificaciones técnicas</h2>
+      <table class="specs-table">
+        <tbody>
+          <tr>
+            <th>Procesador</th>
+            <td>{{phone.procesador.tipo}}, {{phone.procesador.cantidad_nucleos}}, {{phone.procesador.potencia}}</td>
+          </tr>
+          <tr>
+            <th>Cámara frontal</th>
+            <td>{{phone.camara.frontal.resolucion}}</td>
+          </tr>
+          <tr>
+            <th>Cámara trasera</th>
+            <td>{{phone.camara.trasera.resolucion}}</td>
+          </tr>
+          <tr>
+            <th>Almacenamiento</th>
+            <td>{{phone.almacenamiento}}</td>
+          </tr>
+          <tr>
+            <th>Tamaño de pantalla</th>
+            <td>{{phone.pantalla.medidas}}</td>
+          </tr>
+          <tr>
+            <th>Resistente al Agua/Polvo</th>
+            <td>{{phone.otros.resistente_agua_polvo}}</td>
+          </tr>
+          <tr>
+            <th>SIM</th>
+            <td>{{phone.otros.tipo_sim}}</td>
+          </tr>
+          <tr>
+            <th>NFC</th>
+            <td>{{phone.otros.nfc}}</td>
+          </tr>
+          <tr>
+            <th>Pin de carga</th>
+            <td>{{phone.otros.pin_carga}}</td>
+          </tr>
+          <tr>
+            <th>Contenido de la caja</th>
+            <td>{{phone.otros.viene_con_cargador}}</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  
-    <!-- Información del producto (parte derecha) -->
-    <div class="product-details">
-      <h1>{{phone.modelo}}</h1>
-      <div class="env-gar">
-        <p>{{phone.pantalla.medidas}}</p>
-      <p><strong>Garantia Oficial</strong></p>
-      <p>Hasta 1 día hábil después de la aprobación del pago</p>
-      </div>
-      
-      <div class="button-section">
-        <p>Contacta con nostros para saber mas sobre el producto y su disponibilidad</p>
-        <button>Consultar</button>
-        <p>Compara este y otros productos mas!</p>
-        <button>Comparar</button>
-      </div>
-
-<!-- Sección de Color y Memoria debajo del botón de compra -->
-  <div class="product-options">
-  <!-- Opciones de color -->
-    <div class="color-options">
-      <h3>Color</h3>
-      <div class="color-circles">
-       <div class="color-circle cream" title="Cream"></div>
-        <div class="color-circle graphite" title="Graphite"></div>
-        <div class="color-circle lavender selected" title="Lavender"></div>
-        <div class="color-circle mint" title="Mint"></div>
-        <div class="color-circle blue" title="Blue"></div>
-      </div>
-   </div>
-  </div>
-
-    </div>
-  </div>
-  
-  
-
-
-  
-  
-  
-
-
-
-<!-- Especificaciones tecnicas -->
-<div class="tech-specs-section">
-  <h2>Especificaciones técnicas</h2>
-  <table class="specs-table">
-    <tbody>
-      <tr>
-        <th>Procesador</th>
-        <td>{{phone.procesador.tipo}}, {{phone.procesador.cantidad_nucleos}}, {{phone.procesador.potencia}}</td>
-      </tr>
-      <tr>
-        <th>Cámara frontal</th>
-        <td>{{phone.camara.frontal.resolucion}}</td>
-      </tr>
-      <tr>
-        <th>Cámara trasera</th>
-        <td>{{phone.camara.trasera.resolucion}}</td>
-      </tr>
-      <tr>
-        <th>Almacenamiento</th>
-        <td>{{phone.almacenamiento}}</td>
-      </tr>
-      <tr>
-        <th>Tamaño de pantalla</th>
-        <td>{{phone.pantalla.medidas}}</td>
-      </tr>
-      <tr>
-        <th>Resistente al Agua/Polvo</th>
-        <td>{{phone.otros.resistente_agua_polvo}}</td>
-      </tr>
-      <tr>
-        <th>SIM</th>
-        <td>{{phone.otros.tipo_sim}}</td>
-      </tr>
-      <tr>
-        <th>NFC</th>
-        <td>{{phone.otros.nfc}}</td>
-      </tr>
-      <tr>
-        <th>Pin de carga</th>
-        <td>{{phone.otros.pin_carga}}</td>
-      </tr>
-      <tr>
-        <th>Contenido de la caja</th>
-        <td>{{phone.otros.viene_con_cargador}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
 
 
 
 
 
 
-        
-      <!-- las tres fotitos -->
-  <!-- <div class="photos-container">
+
+    <!-- las tres fotitos -->
+    <!-- <div class="photos-container">
     <div class="photo">
       <img src="https://picsum.photos/400/400?random=1" loading="lazy" alt="Foto 1">
       <p>{{subTitulo}}</p>
@@ -144,104 +144,45 @@
 
 
 
-  <!-- otros productos -->
-  <div class="product-container">
-  
-    <!-- Modo normal (productos uno al lado del otro) -->
-    <div class="normal-view">
-  
-      <div class="phones-slider-button left" (click)="fnDespPhonCarroLeft()">&#8249;</div>
-  
-      <div class="slider-box-container-phones">
-        <div class="slider-box-phones" [ngStyle]="{'left':phonesCarrouselPosition+'px'}">
-          <app-product-data class="phone-card" *ngFor="let phone of phonesFamily"
-            [phoneDetails]="phone"
-            (elementWidth)="fnGetElementWidth($event)"
-            >&#8250;</app-product-data>
-      
+    <!-- otros productos -->
+    <div class="product-container">
+
+      <!-- Modo normal (productos uno al lado del otro) -->
+      <div class="normal-view">
+
+        <div class="phones-slider-button left" (click)="fnDespPhonCarroLeft()">&#8249;</div>
+
+        <div class="slider-box-container-phones">
+          <div class="slider-box-phones" [ngStyle]="{'left':phonesCarrouselPosition+'px'}">
+            <app-product-data class="phone-card" *ngFor="let phone of phonesFamily" [phoneDetails]="phone"
+              (elementWidth)="fnGetElementWidth($event)">&#8250;</app-product-data>
+
+          </div>
         </div>
+        <div class="phones-slider-button right" (click)="fnDespPhonCarroRight()">&#8250;</div>
       </div>
-      <div class="phones-slider-button right" (click)="fnDespPhonCarroRight()">&#8250;</div>
+
     </div>
-   
-  </div>
-  
-
-  
 
 
-    
-        
-  <!-- FAQ -->
-  <div class="faq-section">
-    <h2>Preguntas sobre nuestros productos</h2>
-    <div class="faq-grid">
-      <div class="faq-column">
-        <h3>Checkout</h3>
-        <details>
-          <summary>How to Contact Etsy Support</summary>
-          <p>{{descrip}}</p>
-        </details>
-        <details>
-          <summary>How to Purchase an Item On Etsy</summary>
-          <p>{{descrip}}</p>
-        </details>
-       
-      </div>
-      <div class="faq-column">
-        <h3>Orders & Returns</h3>
-        <details>
-          <summary>Change a Wrong Shipping Address on an Order</summary>
-          <p>{{descrip}}</p>
-        </details>
-        <details>
-          <summary>How to Track Your Etsy Order</summary>
-          <p>{{descrip}}</p>
-        </details>
-        
-      </div>
-      <div class="faq-column">
-        <h3>Purchasing</h3>
-        <details>
-          <summary>How to Search for Items and Shops on Etsy</summary>
-          <p>{{descrip}}</p>
-        </details>
-        <details>
-          <summary>COVID-19 Safety on Etsy</summary>
-          <p>{{descrip}}</p>
-        </details>
-        
-      </div>
-    </div>
-  </div>
-  
-  
-  
-  <!-- formulario -->
-  <div class="subscribe-section">
-    <div class="subscribe-container">
-      <h2>Completa el fomulario para conocer mas sobre nosotros</h2>
-      <a href="https://forms.gle/tu-formulario-google" target="_blank" class="subscribe-btn">Ingresar</a>
-    </div>
-  </div>
-  
-</div>
 
-    <app-product-container></app-product-container>
+
+
+
 
     <!-- FAQ -->
     <div class="faq-section">
-      <h2>Featured articles</h2>
+      <h2>Preguntas sobre nuestros productos</h2>
       <div class="faq-grid">
         <div class="faq-column">
           <h3>Checkout</h3>
           <details>
             <summary>How to Contact Etsy Support</summary>
-            <p>Explanation on how to contact Etsy support in case of issues.</p>
+            <p>{{descrip}}</p>
           </details>
           <details>
             <summary>How to Purchase an Item On Etsy</summary>
-            <p>Steps to follow when making a purchase on Etsy.</p>
+            <p>{{descrip}}</p>
           </details>
 
         </div>
@@ -249,11 +190,11 @@
           <h3>Orders & Returns</h3>
           <details>
             <summary>Change a Wrong Shipping Address on an Order</summary>
-            <p>Instructions on changing a wrong address on your order.</p>
+            <p>{{descrip}}</p>
           </details>
           <details>
             <summary>How to Track Your Etsy Order</summary>
-            <p>Learn how to track the status of your order.</p>
+            <p>{{descrip}}</p>
           </details>
 
         </div>
@@ -261,29 +202,24 @@
           <h3>Purchasing</h3>
           <details>
             <summary>How to Search for Items and Shops on Etsy</summary>
-            <p>Guide on how to effectively search for items and shops.</p>
+            <p>{{descrip}}</p>
           </details>
           <details>
             <summary>COVID-19 Safety on Etsy</summary>
-            <p>Safety guidelines related to purchasing during COVID-19.</p>
+            <p>{{descrip}}</p>
           </details>
 
         </div>
       </div>
     </div>
+  </div>
 
-<app-footer></app-footer>
-
-
-
-    <!-- formulario -->
-    <div class="subscribe-section">
-      <div class="subscribe-container">
-        <h2>Completa el fomulario para conocer mas sobre nosotros</h2>
-        <a href="https://forms.gle/tu-formulario-google" target="_blank" class="subscribe-btn">Ingresar</a>
-      </div>
+  <!-- formulario -->
+  <div class="subscribe-section">
+    <div class="subscribe-container">
+      <h2>Completa el fomulario para conocer mas sobre nosotros</h2>
+      <a href="https://forms.gle/tu-formulario-google" target="_blank" class="subscribe-btn">Ingresar</a>
     </div>
-
   </div>
 
 </section>
