--- a/src/app/product/img-component/img-component.component.html
+++ b/src/app/product/img-component/img-component.component.html
@@ -23,9 +23,9 @@
 
             <!-- Información del producto (parte derecha) -->
             <div class="product-details">
-                <h1>{{phone.modelo}}</h1>
+                <h1>{{phone().modelo}}</h1>
                 <div class="env-gar">
-                    <p>{{phone.pantalla.medidas}}</p>
+                    <p>{{phone().pantalla.medidas}}</p>
                     <p><strong>Garantia Oficial</strong></p>
                     <p>Hasta 1 día hábil después de la aprobación del pago</p>
                 </div>
@@ -41,7 +41,7 @@
                 <div class="product-options">
                     <!-- Opciones de color -->
                     <div class="color-options">
-                        <h3>Color</h3>
+                        <h3>Colores disponibles</h3>
                         <div class="color-circles">
                             <div class="color-circle cream" title="Cream"></div>
                             <div class="color-circle graphite" title="Graphite"></div>
