--- a/src/app/falsoHome/home.component.html
+++ b/src/app/falsoHome/home.component.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 <app-banner></app-banner>
+<app-banner-static [toRight]="false"></app-banner-static>
 <app-product-container></app-product-container>
+<app-banner-static [toRight]="true"></app-banner-static>
+
 <!-- <app-info-prodructs></app-info-prodructs> -->
 <app-history-page></app-history-page>
 <app-info-pay></app-info-pay>
