--- a/src/app/product/banners/banner-video/banner-video.component.html
+++ b/src/app/product/banners/banner-video/banner-video.component.html
@@ -1,1 +1,5 @@
-<p>banner-video works!</p>
+<div class="wrapper">
+    <video>
+        <source src="/videos/dinamic-island.mp4">  
+    </video>
+</div>
