--- a/src/app/product/product-gallery/product-gallery.component.html
+++ b/src/app/product/product-gallery/product-gallery.component.html
@@ -155,7 +155,7 @@
 
 
     <!-- FAQ -->
-    <div class="faq-section">
+    <!-- <div class="faq-section">
       <h2>Preguntas sobre nuestros productos</h2>
       <div class="faq-grid">
         <div class="faq-column">
@@ -195,7 +195,7 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
