--- a/src/app/product/banners/banner-static/banner-static.component.css
+++ b/src/app/product/banners/banner-static/banner-static.component.css
@@ -4,12 +4,12 @@
   align-items: center;
   justify-content: center;
   margin: 20px;
-  padding: 20px;
+  /* padding: 100px; */
   border-radius: 10px;
 }
 
 .banner-content {
-  max-width: 600px;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -46,3 +46,10 @@
     text-align: left;
   }
 }
+
+
+
+
+
+
+
