--- a/src/app/product/technical-sheet/technical-sheet.component.css
+++ b/src/app/product/technical-sheet/technical-sheet.component.css
@@ -5,7 +5,7 @@
     padding: 20px;
     background-color: #f8f9fa;
     /* border-radius: 8px; */
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
   }
   
@@ -70,3 +70,6 @@
       }
   }
   
+
+
+
