--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -20,7 +20,7 @@
         <img [src]="phones[index].url" [alt]="phones[index].alt">
       </div>
 
-      <img class="shadow" src="/static_imgs/designs/shadow.png" loading="lazy" alt="">
+      <!-- <img class="shadow" src="/static_imgs/designs/shadow.png" loading="lazy" alt=""> -->
 
     </div>
 
