--- a/src/app/product/product-gallery/product-gallery.component.html
+++ b/src/app/product/product-gallery/product-gallery.component.html
@@ -138,8 +138,8 @@
 
         <div class="slider-box-container-phones">
           <div class="slider-box-phones" [ngStyle]="{'left':phonesCarrouselPosition+'px'}">
-            <app-product-data class="phone-card" *ngFor="let phone of phonesFamily" [phoneDetails]="phone"
-              (elementWidth)="fnGetElementWidth($event)">&#8250;</app-product-data>
+            <!-- <app-product-data class="phone-card" *ngFor="let phone of phonesFamily" [phoneDetails]="phone"
+              (elementWidth)="fnGetElementWidth($event)">&#8250;</app-product-data> -->
 
           </div>
         </div>
