--- a/src/app/sec-products/product-data/product-data.component.html
+++ b/src/app/sec-products/product-data/product-data.component.html
@@ -1,8 +1,6 @@
 
 <div class="product-card">
-    <!-- <img [src]="phoneDetais()" alt="Imagen del producto" /> -->
-    <h3>{{ phoneDetails().model }}</h3>
-    <p>{{ phoneDetails().display }}</p>
-    <p class="price">{{ phoneDetails().price }}</p>
-    <button>Comprar</button>
+    <img [src]="phoneDetails().imagenes[randomNum].imgFront" alt="Imagen del producto" />
+    <h3>{{ phoneDetails().modelo }}</h3>
+    <button>ver mas</button>
 </div>
