--- a/src/app/static/header/header.component.css
+++ b/src/app/static/header/header.component.css
@@ -1,8 +1,6 @@
 header {
     width: 100%;
-    /* background-color: var(--light-fourty-color); */
-    background-color: white;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.043);
 
     position: sticky;
     top: 0;
@@ -13,7 +11,7 @@ header {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
     padding: 5px 15px;
 }
 
@@ -58,55 +56,62 @@ nav ul li a:hover {
     color: #000;
 }
 
+.normal {
+    background-color: var(--light-fourty-color);
+    background-color: white;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+
+}
+
 /* Media queries para pantallas pequeñas */
 @media (max-width: 768px) {
 
-    #nav-links-norm{
+    #nav-links-norm {
 
         display: none;
 
     }
 
     .navbar {
-        padding: 10px; 
+        padding: 10px;
         display: flex;
         justify-content: space-around;
         align-content: center;
         vertical-align: middle;
     }
-    
-    .menu-icon{
+
+    .menu-icon {
         display: inline;
     }
 
-    .nav-mobile{
+    .nav-mobile {
         display: visible;
         position: fixed;
         height: 100vh;
         width: 100vw;
         z-index: 999;
-        top:0;
+        top: 0;
 
         padding: 20px;
         /* background-color: var(--light-fourty-color);  */
         background-color: #fff;
     }
-    
-    nav div{
+
+    nav div {
         width: 100%;
         height: 50px;
         padding: 20px;
         text-align: center;
     }
 
-    nav div img{
+    nav div img {
         width: 1.5rem;
-        height: auto;        
-        filter:contrast(0) brightness(100);
+        height: auto;
+        filter: contrast(0) brightness(100);
         cursor: pointer;
     }
 
-    nav ul{
+    nav ul {
         flex-direction: column;
         height: 80%;
         width: 100%;
@@ -118,7 +123,7 @@ nav ul li a:hover {
         padding: 10px 0;
         border-bottom: 1px solid #ccc;
     }
-    
+
     nav ul.active {
         display: flex;
     }
