--- a/src/app/falsoHome/home.component.html
+++ b/src/app/falsoHome/home.component.html
@@ -1,5 +1,4 @@
-<div (scroll)="fnScrool($event)">
-<app-header [isOnTopOfPage]="true"></app-header>
+<app-header></app-header>
 <app-banner></app-banner>
 <app-banner-static [toRight]="false"></app-banner-static>
 <app-product-container></app-product-container>
@@ -17,4 +16,3 @@
 
 <!-- <app-product-gallery></app-product-gallery> -->
 <app-footer></app-footer>
-</div>
