--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="navbar" [ngClass]="{'normal':!isOnTopOfPage}">
+    <div class="navbar" [ngClass]="{'normal':isNotOnTopOfPage}">
 
         <div class="logo">
             <a href=""><img [src]="Icon.url" [alt]="Icon.name"/></a>
