--- a/src/app/falsoHome/home.component.html
+++ b/src/app/falsoHome/home.component.html
@@ -3,6 +3,8 @@
 <app-banner></app-banner>
 
 <app-spacer></app-spacer>
+<app-spacer></app-spacer>
+
 
 <app-banner-static [toRight]="false"></app-banner-static>
 
