--- a/src/app/history-page/history-page.component.html
+++ b/src/app/history-page/history-page.component.html
@@ -1,6 +1,6 @@
 <div class="banner-container" *ngIf = "bannerVi">
     <video autoplay muted loop class="banner-video" controls autoplay>
-      <source [src]="bannerVi.videoUrl" type="video/mp4" />
+      <source [src]="bannerVi[2].videoUrl" type="video/mp4" />
     </video>
   </div>
   
