--- a/src/app/product/banners/banner-static/banner-static.component.html
+++ b/src/app/product/banners/banner-static/banner-static.component.html
@@ -1,4 +1,5 @@
-<div class="banner-container" *ngIf = "toRight()">
+<div *ngIf = "false">
+  <div class="banner-con" *ngIf = "toRight()" >
     <div class="banner-content">
       <h2>{{bannerDataIphone[2].model}} </h2>
       <p>{{bannerDataIphone[2].description.text}}</p>
@@ -8,7 +9,7 @@
     </div>
   </div>
   
-<div class="banner-container" *ngIf="!toRight()">
+<div class="banner-con" *ngIf="!toRight()">
    <div class="banner-image">
     <img src="https://picsum.photos/400/400?random=1" loading="lazy" alt="iPhone display">
   </div>
@@ -17,3 +18,33 @@
     <p>{{bannerDataIphone[2].description.text}}</p>
   </div>
 </div>
+</div>
+
+
+
+<div *ngIf = "true">
+  <div class="banner-con" *ngIf = "toRight()">
+  <div class="banner-content">
+    <h2>{{bannerDataIphone[2].model}} </h2>
+    <p>{{bannerDataIphone[2].description.text}}</p>
+  </div>
+  <div class="banner-vi">
+    <video autoplay muted loop controls autoplay>
+      <source [src]="bannerVi[2].videoUrl" type="video/mp4" />
+    </video>
+  </div>
+</div>
+
+<div class="banner-con" *ngIf="!toRight()">
+ <div class="banner-vi">
+  <video autoplay muted loop controls autoplay>
+    <source [src]="bannerVi[1].videoUrl" type="video/mp4" />
+  </video>
+</div>
+<div class="banner-content">
+  <h2>{{bannerDataIphone[2].model}} </h2>
+  <p>{{bannerDataIphone[2].description.text}}</p>
+</div>
+</div>
+</div>
+
