--- a/src/app/sec-products/product-container/product-container.component.css
+++ b/src/app/sec-products/product-container/product-container.component.css
@@ -159,6 +159,23 @@
     visibility: initial;
   }
 
+  .slider-box-phones{
+    gap: 30px;
+    margin: 0px;
+    padding: 0px;
+  }
+
+   .phone-card{
+    width: 500px;
+    height: 90%;
+    white-space: nowrap;
+  } 
+
+  .product-container{
+    width: 100%;
+    height: 80vh;
+  }
+
 }
 
 @media (max-width: 600px) {
