--- a/src/app/static/header/header.component.html
+++ b/src/app/static/header/header.component.html
@@ -12,8 +12,8 @@
         <nav>
             <ul id="nav-links-norm">
                 <li><a href="#" class="btn">Mac</a></li>
-                <li><a href="#" class="btn">iPad</a></li>
-                <li><a href="product" class="btn">iPhone</a></li>
+                <li><a [routerLink]="['/product2',13]"class="btn">iPad</a></li>
+                <li><a href="product2" class="btn">iPhone</a></li>
                 <li><a href="testZone" class="btn">testZone</a></li>
                 <li><a 
                     href="comparador" class="btn">Comparar</a></li>
