--- a/src/app/phoneComparator-page/comparator-component/comparator-component.component.html
+++ b/src/app/phoneComparator-page/comparator-component/comparator-component.component.html
@@ -83,7 +83,7 @@
 
         <div class="phoneImgs feacture">
 
-            <app-comparador-img *ngFor="let phone of arrPhonesToCompare" [colorsPhoneImagen]="phone.imagenes">
+            <app-comparador-img *ngFor="let phone of arrPhonesToCompare" [colorsPhoneImagen]="[]">
             </app-comparador-img>
 
         </div>
