--- a/src/app/product/img-component/img-component.component.html
+++ b/src/app/product/img-component/img-component.component.html
@@ -46,18 +46,15 @@
             </div>
         </div>
 
-
-
         <div class="button-section">
             <p>Contacta con nostros para saber mas sobre el producto y su disponibilidad</p>
             <button>Consultar</button>
             <p>Compara este y otros productos mas!</p>
-            <button>Comparar</button>
+            <button [routerLink]="['/comparador']"> Comparar</button>
         </div>
 
         <!-- Sección de Color y Memoria debajo del botón de compra -->
-
-
+         
     </div>
 
 </section>
