--- a/src/app/sec-products/product-container/product-container.component.css
+++ b/src/app/sec-products/product-container/product-container.component.css
@@ -186,6 +186,14 @@
     padding: 0;
   }
 
-  
+  /* Ajuste para mostrar solo un título en el carrusel */
+  /* .title-carousel-container {
+    width: 80%; 
+  }
+
+  .title-carousel-item {
+    min-width: 100%; 
+    text-align: center; 
+  } */
 
 }
